<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.luoyp.brnmall.activity.LoginActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include layout="@layout/topbar"></include>

    <!--<ScrollView-->
        <!--android:id="@+id/login_form"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_phone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:maxLength="11" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="16"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_sign_in"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"/>

        </LinearLayout>
    <!--</ScrollView>-->



    <LinearLayout
        android:id="@+id/action_reg_forget"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/action_forget_pwd"
            android:id="@+id/tv_forget_pwd"
            android:gravity="left"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="@dimen/abc_text_size_caption_material" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/action_register"
            android:id="@+id/tv_register"
            android:gravity="right"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="@dimen/abc_text_size_caption_material"
            android:onClick="toRegister"/>

    </LinearLayout>
</LinearLayout>
