<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="com.luoyp.brnmall.activity.RegisterActivity">

    <include layout="@layout/topbar"></include>

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/reg_account"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/prompt_phone"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:padding="5dp"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/reg_code"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/prompt_code"
                        android:inputType="text"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:padding="5dp"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_get_code"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/action_get_code"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/reg_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:padding="5dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/reg_confirmpwd"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/prompt_confirmpwd"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:padding="5dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/reg_introduce_phone"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/prompt_introduce_phone"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:padding="5dp"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/action_register"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
