<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.luoyp.brnmall.activity.ResetPaypwdActivity">

    <include layout="@layout/topbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_pwd"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:padding="5dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_confirmpwd"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/prompt_confirmpwd"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:padding="5dp"/>
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_reset"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:text="@string/action_reset_password"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>
